# Lokkan

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-15d1ff03576ecb2bf9e98ebe27c77cd5dad605ca404d90547a2c0e8902d122ac.json  query-1bb019eec997ab607a80ebfb00caea6309f8dd793a159ac5ab9b546a23fba962.json  query-207e87957818ca962379ecb98bdf49a00cd3eb3197639e8c010d18c8c3a15f6a.json  query-2352c2ebd5b9200b9f031c16094e70b9b3e3a7ab945b7b771633c6d5de736b96.json  query-2f82c713ed8a4a8dde0b61b7650481bfebf1f51088e113de4d982b33ee427293.json  query-34cafdc6d5bef42d7192b1043fb1f64c0d5f8ba6c3aa90e9d9d58853c532b671.json  query-374ab6aff717fbb86ed96b2747fb2d7efdea08de863ffbeaa808747aed0b81c1.json  query-37a32b222a9ce3c2a57c9b4d549c180168ffbaf7f8d83a0e4aabb8f20062d982.json  query-3f327f89fd19659f655327aaacb322a6d1dec5bbff566875891206b385341ba1.json  query-3f61b0e0a1c0b344eb4cb8265cc75e57a093ac72e963e822b820e5f3064f53d3.json  query-462e539d36b966dbba75b03164cf175994f91e1a04d0956ec32cff02db19874b.json  query-4c3c97f355368b0692ee94afa2bd8611aae1e8824fc8b10e5e934ddb70b0ba3f.json  query-4e360471c142737c49ba48937f6f835f13514a0407ef882837a2af867aea59d8.json  query-51889762d7118f23571cfc108114b8c9b7e03306514b19d257c19d95bd6e17a3.json  query-57b1d041b01194e1441737e66e10df88b042bf0711caa58e572fdcb8449c3c3f.json  query-60a87d94738a0a7df7f6a910d652923257caeb4bdd6306cbc150752fb35fc284.json  query-623c0275849f28da0c0dfdfef6af4f239db640b406da0ba7583c208df66f3efc.json  (+24 more)
(+93 files in other folders)
