[package]
name         = "app"
version      = "0.1.0"
description  = "A Tauri App"
authors      = ["you"]
license      = ""
repository   = ""
edition      = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name       = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json       = "1.0"
serde            = { version = "1.0", features = ["derive"] }
sqlx             = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio            = { version = "1", features = ["full"] }
reqwest          = { version = "0.13.2", features = ["json"] }
chrono           = { version = "0.4", features = ["serde"] }
dotenvy          = "0.15.7"
anyhow           = "1.0"
uuid             = { version = "1.21.0", features = ["v4"] }
log              = "0.4"
tauri            = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
